fix(page-notice,section-notice): spacing and alignment tweaks (#1974)

--- a/src/less/section-notice/section-notice.less
+++ b/src/less/section-notice/section-notice.less
@@ -64,6 +64,7 @@ span[role="region"].section-notice {
     grid-column: 1;
     grid-row: 1;
     height: @spacing-200;
+    margin-top: 1px;
     padding-right: @spacing-200;
 }
 
@@ -81,6 +82,7 @@ span[role="region"].section-notice {
     grid-column: 4;
     grid-row: 1;
     justify-self: end;
+    margin-top: 2px;
 }
 
 .section-notice__main p {
@@ -106,7 +108,6 @@ p.section-notice__cta {
 @media (min-width: 601px) {
     section.section-notice,
     div[role="region"].section-notice {
-        flex-wrap: nowrap;
         margin: @spacing-200 0;
     }
 
@@ -120,7 +121,6 @@ p.section-notice__cta {
     }
 
     .section-notice__footer {
-        margin-top: 0;
         padding-left: @spacing-200;
     }
 }
